# mlops-datamecum

./: CHANGELOG.md  CONTRIBUTING.md  README.md  example.csv  pyproject.toml
docs/: Makefile  conf.py  example.ipynb
src/mlops/: __init__.py  mlops.py
tests/: test_mlops.py
