[tool.poetry]
name = "mlops"
version = "0.1.0"
description = "Esto es un paquete para mlops"
authors = ["Daniel Ruiz"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.0.0"
fastapi = "0.87.0"
optuna = "^4.2.1"
pandas = "^2.2.3"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
